--- a/_layouts/pony.html
+++ b/_layouts/pony.html
@@ -2,8 +2,8 @@
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="5; URL=https://linbei9487.github.io/pony">
-    <link rel="canonical" href="https://linbei9487.github.io/pony">
+    <meta http-equiv="refresh" content="5; URL=https://linbei9487.github.io/ponyre">
+    <link rel="canonical" href="https://linbei9487.github.io/ponyre">
 
 {% seo %}
     <link rel="preconnect" href="https://fonts.gstatic.com">
