--- a/_layouts/pony.html
+++ b/_layouts/pony.html
@@ -2,7 +2,7 @@
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="5; URL=https://linbei9487.github.io/ponyre">
+    <meta http-equiv="refresh" content="10; URL=https://linbei9487.github.io/ponyre">
     <link rel="canonical" href="https://linbei9487.github.io/ponyre">
 
 {% seo %}
@@ -29,7 +29,7 @@
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
     </header>
-<p>You will be redirected in <span id="counter">10</span> second(s).</p>
+<h2><span id="counter">10</span> 秒後即將小馬國</h2>
 <script type="text/javascript">
 function countdown() {
     var i = document.getElementById('counter');
