--- a/_layouts/pony.html
+++ b/_layouts/pony.html
@@ -2,8 +2,8 @@
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="10; URL=https://linbei9487.github.io/ponyre">
-    <link rel="canonical" href="https://linbei9487.github.io/ponyre">
+    <meta http-equiv="refresh" content="10; URL=https://linbei9487.github.io/pony">
+    <link rel="canonical" href="https://linbei9487.github.io/pony">
 
 {% seo %}
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -18,8 +18,8 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
-      <h1 class="project-name">10 秒後即將進入小馬國</h1>
-      <h2 class="project-tagline">Going to Equestra in 10 Seconds</h2>
+      <h1 class="project-name">即將進入小馬國</h1>
+      <h2 class="project-tagline">Going to Equestra</h2>
       
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
@@ -29,7 +29,7 @@
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
     </header>
-<h2>你再<span id="counter">10</span> 秒後即將進入小馬國</h2>
+<h2>頁面將在<span id="counter">10</span> 秒刷新</h2>
 <script type="text/javascript">
 function countdown() {
     var i = document.getElementById('counter');
