--- a/_layouts/pony.html
+++ b/_layouts/pony.html
@@ -29,7 +29,7 @@
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
     </header>
-<h2>頁面將在<span id="counter">10</span> 秒刷新</h2>
+<h2>頁面將在<span id="counter">10</span> 秒後刷新</h2>
 <script type="text/javascript">
 function countdown() {
     var i = document.getElementById('counter');
