--- a/_layouts/pony.html
+++ b/_layouts/pony.html
@@ -19,7 +19,7 @@
 
     <header class="page-header" role="banner">
       <h1 class="project-name">即將進入小馬國</h1>
-      <h2 class="project-tagline">Going to Equestra</h2>
+      <h2 class="project-tagline">Going to Equestria</h2>
       
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
