--- a/_layouts/pony.html
+++ b/_layouts/pony.html
@@ -18,8 +18,8 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
-      <h1 class="project-name">即將進入小馬國</h1>
-      <h2 class="project-tagline">Going to Equestria</h2>
+      <h1 class="project-name">進入小馬國</h1>
+      <h2 class="project-tagline">Enter Equestria</h2>
       
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
