--- a/_layouts/pony.html
+++ b/_layouts/pony.html
@@ -2,10 +2,10 @@
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <meta charset="UTF-8">
-<!--
-    <meta http-equiv="refresh" content="10; URL=https://linbei9487.github.io/pony">
+
+    <meta http-equiv="refresh" content="60; URL=https://linbei9487.github.io/pony">
     <link rel="canonical" href="https://linbei9487.github.io/pony">
--->
+
 {% seo %}
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" as="style" type="text/css" crossorigin>
@@ -38,9 +38,11 @@
 <script type="text/javascript">
 function countdown() {
     var i = document.getElementById('counter');
-    if (parseInt(i.innerHTML)<=0) {
-        location.href = 'pony';
-    }
+  <!--  if (parseInt(i.innerHTML)<=0) {
+   <!--    location.href = 'pony'; 
+ 
+   <!-- } 
+   
 if (parseInt(i.innerHTML)!=0) {
     i.innerHTML = parseInt(i.innerHTML)-1;
 }
