--- a/_layouts/pony.html
+++ b/_layouts/pony.html
@@ -38,10 +38,10 @@
 <script type="text/javascript">
 function countdown() {
     var i = document.getElementById('counter');
-  // <!--  if (parseInt(i.innerHTML)<=0) {
-  //  <!--    location.href = 'pony'; 
+  //  if (parseInt(i.innerHTML)<=0) {
+  //      location.href = 'pony'; 
  
-  // <!-- } 
+  //  } 
   
 if (parseInt(i.innerHTML)!=0) {
     i.innerHTML = parseInt(i.innerHTML)-1;
