--- a/_layouts/backpony.html
+++ b/_layouts/backpony.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
 
-    <meta http-equiv="refresh" content="20; URL=https://linbei9487.github.io/pony">
-    <link rel="canonical" href="https://linbei9487.github.io/pony">
+    <meta http-equiv="refresh" content="20">
+    <!-- <link rel="canonical" href="https://linbei9487.github.io/pony"> -->
 
 {% seo %}
     <link rel="preconnect" href="https://fonts.gstatic.com">
