--- a/_layouts/pony.html
+++ b/_layouts/pony.html
@@ -6,7 +6,19 @@
     <meta http-equiv="refresh" content="20">
     <!-- ; URL=https://linbei9487.github.io/pony"> -->
     <!-- <link rel="canonical" href="https://linbei9487.github.io/pony"> -->
+    <style>
+      html {
+          height: 100%;
+      }
 
+      body {
+          background-image: url(https://static.wikia.nocookie.net/mlp/images/b/b3/Mane_six_walking_on_a_rainbow_S7E2.png);
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+          background-position: center;
+          background-size: cover;
+      }
+  </style>
 {% seo %}
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" as="style" type="text/css" crossorigin>
