--- a/_layouts/pony.html
+++ b/_layouts/pony.html
@@ -12,7 +12,7 @@
       }
 
       body {
-          background-image: url(https://static.wikia.nocookie.net/mlp/images/b/b3/Mane_six_walking_on_a_rainbow_S7E2.png/revision/latest?cb=20170317220526);
+          background-image: url(./img/background.webp);
           background-repeat: no-repeat;
           background-attachment: fixed;
           background-position: center;
