--- a/_layouts/backpony.html
+++ b/_layouts/backpony.html
@@ -5,7 +5,19 @@
 
     <meta http-equiv="refresh" content="20">
     <!-- <link rel="canonical" href="https://linbei9487.github.io/pony"> -->
+    <style>
+      html {
+          height: 100%;
+      }
 
+      body {
+          background-image: url(./img/background.png);
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+          background-position: center;
+          background-size: cover;
+      }
+  </style>
 {% seo %}
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" as="style" type="text/css" crossorigin>
