--- a/_layouts/backpony.html
+++ b/_layouts/backpony.html
@@ -11,7 +11,7 @@
       }
 
       body {
-          background-image: url(./img/background.png);
+          background-image: url(https://linbei9487.github.io/img/background.png);
           background-repeat: no-repeat;
           background-attachment: fixed;
           background-position: center;
