--- a/_layouts/pony.html
+++ b/_layouts/pony.html
@@ -12,7 +12,7 @@
       }
 
       body {
-          background-image: url(./img/background.png);
+          background-image: url(https://linbei9487.github.io/img/background.png);
           background-repeat: no-repeat;
           background-attachment: fixed;
           background-position: center;
