--- a/_layouts/backpony.html
+++ b/_layouts/backpony.html
@@ -17,6 +17,10 @@
           background-position: center;
           background-size: cover;
       }
+      img {
+          width: 540px;
+      //  height: 1000px;
+      }
   </style>
 {% seo %}
     <link rel="preconnect" href="https://fonts.gstatic.com">
