--- a/_layouts/backpony.html
+++ b/_layouts/backpony.html
@@ -19,7 +19,7 @@
       }
       img {
           width: 540px;
-      //  height: 1000px;
+    
       }
   </style>
 {% seo %}
@@ -32,6 +32,10 @@
     {% include head-custom.html %}
   </head>
   <body>
+    <meta name="referrer" content="no-referrer">
+    <META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
+    <META HTTP-EQUIV="EXPIRES" CONTENT="0">
+    <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE">
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
