--- a/_layouts/backpony.html
+++ b/_layouts/backpony.html
@@ -18,7 +18,7 @@
           background-size: cover;
       }
       img {
-          width: 540px;
+          width: 1080px;
     
       }
   </style>
@@ -36,6 +36,7 @@
     <META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
     <META HTTP-EQUIV="EXPIRES" CONTENT="0">
     <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE">
+    <meta name=”viewport” content=”width=device-width”>  
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
