--- a/_layouts/backpony.html
+++ b/_layouts/backpony.html
@@ -53,7 +53,7 @@
   </head>
   <body>
     <button onclick="topFunction()" class="myBtn" id="buttontop" title="Go to top">Top</button>
-    <button onclick="topFunction()" class="myBtn" id="buttonbottom" title="Go to Bottom">End</button>
+    <button onclick="bottomFunction()" class="myBtn" id="buttonbottom" title="Go to Bottom">End</button>
     <script>
       //Get the button
       // var mybutton = document.getElementById("buttontop");
@@ -62,7 +62,7 @@
       window.onscroll = function() {scrollFunction()};
       
       function scrollFunction() {
-        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        if (document.body.scrollTop > 200 || document.documentElement.scrollTop > 200) {
           document.getElementById("buttontop").style.display = "block";
           document.getElementById("buttonbottom").style.display = "none";
         } else {
