--- a/_layouts/backpony.html
+++ b/_layouts/backpony.html
@@ -62,7 +62,7 @@
       window.onscroll = function() {scrollFunction()};
       
       function scrollFunction() {
-        if (document.body.scrollTop > 200 || document.documentElement.scrollTop > 200) {
+        if (document.body.scrollTop > (document.body.scrollHeight/2) || document.documentElement.scrollTop > (document.documentElement.scrollHeight/2)) {
           document.getElementById("buttontop").style.display = "block";
           document.getElementById("buttonbottom").style.display = "none";
         } else {
