--- a/_layouts/backpony.html
+++ b/_layouts/backpony.html
@@ -82,11 +82,16 @@
         document.documentElement.scrollTop = document.documentElement.scrollHeight;
       }
       </script>
+    <!-- nocache,http referrer -->
     <meta name="referrer" content="no-referrer">
     <META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
     <META HTTP-EQUIV="EXPIRES" CONTENT="0">
     <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE">
-    <meta name=”viewport” content=”width=device-width”>  
+    <!-- thumbnail   -->
+    <meta property="og:title" content="Twilight's Library"/>
+    <meta property="og:description" content="Fulfill with Friendship is Magic Episode"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:image" content="https://static.wikia.nocookie.net/mlp/images/b/b3/Mane_six_walking_on_a_rainbow_S7E2.png/revision/latest/scale-to-width-down/1000"/>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
