--- a/_layouts/backpony.html
+++ b/_layouts/backpony.html
@@ -89,7 +89,7 @@
     <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE">
     <!-- thumbnail   -->
     <meta property="og:title" content="Twilight's Library"/>
-    <meta property="og:description" content="Fulfill with Friendship is Magic Episode"/>
+    <meta property="og:description" content="Full with Friendship is Magic Episode"/>
     <meta property="og:type" content="website"/>
     <meta property="og:image" content="https://static.wikia.nocookie.net/mlp/images/b/b3/Mane_six_walking_on_a_rainbow_S7E2.png/revision/latest/scale-to-width-down/1000"/>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
