--- a/_layouts/pony.html
+++ b/_layouts/pony.html
@@ -29,6 +29,11 @@
     {% include head-custom.html %}
   </head>
   <body>
+    <!-- thumbnail   -->
+    <meta property="og:title" content="進入小馬國"/>
+    <meta property="og:description" content="Derpy the Best Pony"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:image" content="https://static.wikia.nocookie.net/mlp/images/8/85/Derpy_flying_past_the_camera_EG2.png/revision/latest/scale-to-width-down/1000"/>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
