--- a/_layouts/pony.html
+++ b/_layouts/pony.html
@@ -1,79 +1,142 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: "en-US" }}">
-  <head>
-    <meta charset="UTF-8">
+<html lang="{{ site.lang | default: " en-US" }}">
 
-    <meta http-equiv="refresh" content="20">
-    <!-- ; URL=https://linbei9487.github.io/pony"> -->
-    <!-- <link rel="canonical" href="https://linbei9487.github.io/pony"> -->
-    <style>
-      html {
-          height: 100%;
-      }
+<head>
+  <meta charset="UTF-8">
 
-      body {
-          background-image: url(https://linbei9487.github.io/img/background.png);
-          background-repeat: no-repeat;
-          background-attachment: fixed;
-          background-position: center;
-          background-size: cover;
-      }
+  <meta http-equiv="refresh" content="20">
+  <!-- ; URL=https://linbei9487.github.io/pony"> -->
+  <!-- <link rel="canonical" href="https://linbei9487.github.io/pony"> -->
+  <style>
+    html {
+      height: 100%;
+    }
+
+    body {
+      background-image: url(https://linbei9487.github.io/img/background.png);
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-position: center;
+      background-size: cover;
+    }
   </style>
-{% seo %}
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" as="style" type="text/css" crossorigin>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#157878">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    {% include head-custom.html %}
-  </head>
-  <body>
-    <!-- thumbnail   -->
-    <meta property="og:title" content="進入小馬國"/>
-    <meta property="og:description" content="Derpy the Best Pony"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:image" content="https://static.wikia.nocookie.net/mlp/images/8/85/Derpy_flying_past_the_camera_EG2.png/revision/latest/scale-to-width-down/1000"/>
-    <a id="skip-to-content" href="#content">Skip to the content.</a>
+  {% seo %}
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" as="style"
+    type="text/css" crossorigin>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="theme-color" content="#157878">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+  {% include head-custom.html %}
+</head>
 
-    <header class="page-header" role="banner">
-      <h1 class="project-name">進入小馬國</h1>
-      <h2 class="project-tagline">Enter Equestria</h2>
-      
+<body>
+  <!-- thumbnail   -->
+  <meta property="og:title" content="進入小馬國" />
+  <meta property="og:description" content="Derpy the Best Pony" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image"
+    content="https://static.wikia.nocookie.net/mlp/images/8/85/Derpy_flying_past_the_camera_EG2.png/revision/latest/scale-to-width-down/1000" />
+  <a id="skip-to-content" href="#content">Skip to the content.</a>
+
+  <header class="page-header" role="banner">
+    <h1 class="project-name">進入小馬國</h1>
+    <h2 class="project-tagline">Enter Equestria</h2>
+
+    {% if site.github.is_project_page %}
+    <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
+    {% endif %}
+    {% if site.show_downloads %}
+    <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
+    <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
+    {% endif %}
+  </header>
+
+  <time class="吳方奈米科技口嗨累計時間" datetime="2022-06-12T15:22:00">
+    <!-- Some fallback content, perhaps the date string itself or a message to users or machines that can't view this component with JS. -->
+    2022-06-12T15:22:00
+  </time>
+  <script>
+    import CountdownTimer from '@10up/countdown-timer';
+
+    new CountdownTimer('.countdown-timer', {
+      onCreate: function (instance) {
+        console.log('onCreate callback', instance);
+      },
+      onEnd: function (instance) {
+        console.log('onEnd callback', instance);
+      },
+      onTick: function (instance) {
+        console.log('onTick callback', instance);
+      },
+
+      allowNegative: false,
+      compact: false,
+      padValues: false,
+      separator: ', ',
+      showZeroes: false,
+      years: {
+        allowed: true,
+        singular: 'year',
+        plural: 'years'
+      },
+      weeks: {
+        allowed: true,
+        singular: 'week',
+        plural: 'weeks'
+      },
+      days: {
+        allowed: true,
+        singular: 'day',
+        plural: 'days'
+      },
+      hours: {
+        allowed: true,
+        singular: 'hour',
+        plural: 'hours'
+      },
+      minutes: {
+        allowed: true,
+        singular: 'minute',
+        plural: 'minutes'
+      },
+      seconds: {
+        allowed: true,
+        singular: 'second',
+        plural: 'seconds'
+      }
+    });
+
+
+  </script>
+  <main id="content" class="main-content" role="main">
+    {{ content }}
+
+    <h2>頁面將在<span id="counter">20</span> 秒後刷新</h2>
+    <script type="text/javascript">
+      function countdown() {
+        var i = document.getElementById('counter');
+        //  if (parseInt(i.innerHTML)<=0) {
+        //      location.href = 'pony'; 
+
+        //  } 
+
+        if (parseInt(i.innerHTML) != 0) {
+          i.innerHTML = parseInt(i.innerHTML) - 1;
+        }
+      }
+      setInterval(function () { countdown(); }, 1000);
+    </script>
+
+    <footer class="site-footer">
       {% if site.github.is_project_page %}
-        <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
+      <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a>
+        is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
       {% endif %}
-      {% if site.show_downloads %}
-        <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
-        <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
-      {% endif %}
-    </header>
 
-    <main id="content" class="main-content" role="main">
-      {{ content }}
+    </footer>
+  </main>
+</body>
 
-      <h2>頁面將在<span id="counter">20</span> 秒後刷新</h2>
-<script type="text/javascript">
-function countdown() {
-    var i = document.getElementById('counter');
-  //  if (parseInt(i.innerHTML)<=0) {
-  //      location.href = 'pony'; 
- 
-  //  } 
-  
-if (parseInt(i.innerHTML)!=0) {
-    i.innerHTML = parseInt(i.innerHTML)-1;
-}
-}
-setInterval(function(){ countdown(); },1000);
-</script>
-
-      <footer class="site-footer">
-        {% if site.github.is_project_page %}
-          <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
-        {% endif %}
-        
-      </footer>
-    </main>
-  </body>
 </html>
