--- a/_layouts/pony.html
+++ b/_layouts/pony.html
@@ -71,11 +71,11 @@
         console.log('onTick callback', instance);
       },
 
-      allowNegative: false,
+      allowNegative: true,
       compact: false,
       padValues: false,
       separator: ', ',
-      showZeroes: false,
+      showZeroes: true,
       years: {
         allowed: true,
         singular: 'year',
