--- a/_layouts/pony.html
+++ b/_layouts/pony.html
@@ -53,7 +53,7 @@
     {% endif %}
   </header>
 
-  <time class="吳方奈米科技口嗨累計時間" datetime="2022-06-12T15:22:00">
+  <time class="countdown-timer" datetime="2022-06-12T15:22:00">
     <!-- Some fallback content, perhaps the date string itself or a message to users or machines that can't view this component with JS. -->
     2022-06-12T15:22:00
   </time>
