--- a/_layouts/pony.html
+++ b/_layouts/pony.html
@@ -54,7 +54,7 @@
   </header>
 
   <!-- Display the countdown timer in an element -->
-<p id="demo"></p>
+<h2>吳方奈米口嗨累計時間<p id="demo"></p></h2>
 
 <script>
 // Set the date we're counting down to
@@ -70,10 +70,10 @@ var x = setInterval(function() {
   var distance = countDownDate - now;
 
   // Time calculations for days, hours, minutes and seconds
-  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+  var days = (Math.floor(distance / (1000 * 60 * 60 * 24)))*-1;
+  var hours = (Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60)))*-1;
+  var minutes = (Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60)))*-1;
+  var seconds = (Math.floor((distance % (1000 * 60)) / 1000))*-1;
 
   // Display the result in the element with id="demo"
   document.getElementById("demo").innerHTML = days + "d " + hours + "h "
