--- a/_layouts/pony.html
+++ b/_layouts/pony.html
@@ -54,39 +54,41 @@
   </header>
 
   <!-- Display the countdown timer in an element -->
-<h2>吳方奈米口嗨累計時間<p id="demo"></p></h2>
-
-<script>
-// Set the date we're counting down to
-var countDownDate = new Date("Jun 12, 2022 15:22:00").getTime();
-
-// Update the count down every 1 second
-var x = setInterval(function() {
-
-  // Get today's date and time
-  var now = new Date().getTime();
-
-  // Find the distance between now and the count down date
-  var distance = countDownDate - now;
-
-  // Time calculations for days, hours, minutes and seconds
-  var days = (Math.floor(distance / (1000 * 60 * 60 * 24)))*-1;
-  var hours = (Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60)))*-1;
-  var minutes = (Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60)))*-1;
-  var seconds = (Math.floor((distance % (1000 * 60)) / 1000))*-1;
-
-  // Display the result in the element with id="demo"
-  document.getElementById("demo").innerHTML = days + "d " + hours + "h "
-  + minutes + "m " + seconds + "s ";
-
-  // If the count down is finished, write some text
-  // if (distance < 0) {
-  //   clearInterval(x);
-  //   document.getElementById("demo").innerHTML = "EXPIRED";
-  // }
-}, 1000);
-</script>
   <main id="content" class="main-content" role="main">
+    <h2>吳方奈米口嗨累計時間<p id="demo"></p>
+    </h2>
+
+    <script>
+      // Set the date we're counting down to
+      var countDownDate = new Date("Jun 12, 2022 15:22:00").getTime();
+
+      // Update the count down every 1 second
+      var x = setInterval(function () {
+
+        // Get today's date and time
+        var now = new Date().getTime();
+
+        // Find the distance between now and the count down date
+        var distance = countDownDate - now;
+
+        // Time calculations for days, hours, minutes and seconds
+        var days = (Math.floor(distance / (1000 * 60 * 60 * 24))) * -1;
+        var hours = (Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60))) * -1;
+        var minutes = (Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60))) * -1;
+        var seconds = (Math.floor((distance % (1000 * 60)) / 1000)) * -1;
+
+        // Display the result in the element with id="demo"
+        document.getElementById("demo").innerHTML = days + "d " + hours + "h "
+          + minutes + "m " + seconds + "s ";
+
+        // If the count down is finished, write some text
+        // if (distance < 0) {
+        //   clearInterval(x);
+        //   document.getElementById("demo").innerHTML = "EXPIRED";
+        // }
+      }, 1000);
+    </script>
+
     {{ content }}
 
     <h2>頁面將在<span id="counter">20</span> 秒後刷新</h2>
