--- a/_layouts/pony.html
+++ b/_layouts/pony.html
@@ -19,6 +19,22 @@
       background-position: center;
       background-size: cover;
     }
+    #demo {
+        display: none;
+        position: fixed;
+        bottom: 20px;
+        right: 30px;
+        z-index: 99;
+        font-size: 18px;
+        border: none;
+        outline: none;
+        background-color: black;
+        opacity: 0.7;
+        color: white;
+        cursor: pointer;
+        padding: 15px;
+        border-radius: 4px;
+      }
   </style>
   {% seo %}
   <link rel="preconnect" href="https://fonts.gstatic.com">
