--- a/_layouts/pony.html
+++ b/_layouts/pony.html
@@ -19,7 +19,7 @@
       background-position: center;
       background-size: cover;
     }
-    #counter {
+    #divc {
         display: none;
         position: fixed;
         bottom: 20px;
@@ -29,7 +29,7 @@
         border: none;
         outline: none;
         background-color: black;
-        opacity: 0.8;
+        opacity: 1;
         color: white;
         cursor: pointer;
         padding: 15px;
@@ -71,7 +71,7 @@
 
   <!-- Display the countdown timer in an element -->
 
-    <div id="counter">
+    <div id="divc">
     <h1>吳方奈米口嗨累計時間<p id="demo"></p>
     </h1>
     </div>
@@ -106,7 +106,7 @@
         // }
       }, 1000);
     </script>
-    <main id="content" class="main-content" role="main">
+  <main id="content" class="main-content" role="main">
     {{ content }}
 
     <h2>頁面將在<span id="counter">20</span> 秒後刷新</h2>
