--- a/_layouts/pony.html
+++ b/_layouts/pony.html
@@ -20,7 +20,7 @@
       background-size: cover;
     }
     #divc {
-        display: none;
+        display: block ;
         position: fixed;
         bottom: 20px;
         right: 30px;
@@ -78,7 +78,7 @@
 
     <script>
       // Set the date we're counting down to
-      var countDownDate = new Date("Jun 12, 2022 15:22:00").getTime();
+      var countDownDate = new Date("Jun 15, 2022 01:58:00").getTime();
 
       // Update the count down every 1 second
       var x = setInterval(function () {
