--- a/_layouts/pony.html
+++ b/_layouts/pony.html
@@ -25,12 +25,12 @@
         bottom: 20px;
         right: 30px;
         z-index: 99;
-        font-size: 9px;
+        font-size: 5px;
         border: none;
         outline: none;
-        background-color: black;
+        
         opacity: 0.3;
-        color: white;
+        color: black;
         cursor: pointer;
         padding: 15px;
         border-radius: 4px;
@@ -78,7 +78,7 @@
 
     <script>
       // Set the date we're counting down to
-      var countDownDate = new Date("Jun 15, 2022 01:58:00").getTime();
+      var countDownDate = new Date("Jun 15, 2022 00:00:00").getTime();
 
       // Update the count down every 1 second
       var x = setInterval(function () {
