--- a/_layouts/pony.html
+++ b/_layouts/pony.html
@@ -90,10 +90,10 @@
         var distance = countDownDate - now;
 
         // Time calculations for days, hours, minutes and seconds
-        var days = (Math.floor(distance / (1000 * 60 * 60 * 24))) * -1;
-        var hours = (Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60))) * -1;
-        var minutes = (Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60))) * -1;
-        var seconds = (Math.floor((distance % (1000 * 60)) / 1000)) * -1;
+        var days = (Math.floor(distance / (1000 * 60 * 60 * 24))) * (-1);
+        var hours = (Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60))) * (-1);
+        var minutes = (Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60))) * (-1);
+        var seconds = (Math.floor((distance % (1000 * 60)) / 1000)) * (-1);
 
         // Display the result in the element with id="demo"
         document.getElementById("demo").innerHTML = days + "天" + hours + "小時"
