--- a/_layouts/pony.html
+++ b/_layouts/pony.html
@@ -20,7 +20,7 @@
       background-size: cover;
     }
     #divc {
-        display: block ;
+        display: inline;
         position: fixed;
         bottom: 20px;
         right: 30px;
