--- a/_layouts/pony.html
+++ b/_layouts/pony.html
@@ -80,8 +80,15 @@
         // Get today's date and time
         var now = new Date().getTime();
 
-        // Find the distance between now and the count down date
-        var distance = now - countDownDate ;
+        // countdown or countup
+        var mode = countDownDate - now ;
+        if ( mode > 0 ){
+        // Find the distance between now and the count down date (countup)  
+          var distance = countDownDate - now ;
+        } else{ 
+        // Find the distance between now and the count down date (countup)
+          var distance = now - countDownDate ;
+        }
 
         // Time calculations for days, hours, minutes and seconds
         var days = (Math.floor(distance / (1000 * 60 * 60 * 24))) * (1);
@@ -89,9 +96,19 @@
         var minutes = (Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60))) * (1);
         var seconds = (Math.floor((distance % (1000 * 60)) / 1000)) * (1);
 
-        // Display the result in the element with id="demo"
+        if (days > 0 ){
+          // Display the result in the element with id="demo"
         document.getElementById("demo").innerHTML = days + "天" + hours + "小時"
           + minutes + "分" + seconds + "秒";
+        }else if (hours > 0 ){
+          document.getElementById("demo").innerHTML =  hours + "小時"
+          + minutes + "分" + seconds + "秒";
+        }else if (minuts > 0 ){
+          document.getElementById("demo").innerHTML =  minutes + "分" + seconds + "秒";
+        }else { 
+          document.getElementById("demo").innerHTML =  seconds + "秒";
+        }  
+        
 
         // If the count down is finished, write some text
         // if (distance < 0) {
