--- a/_includes/head-custom-google-analytics.html
+++ b/_includes/head-custom-google-analytics.html
@@ -1,4 +1,4 @@
-<!-- Global site tag (gtag.js) - Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-D6TE587Q2X"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -6,4 +6,4 @@
   gtag('js', new Date());
 
   gtag('config', 'G-D6TE587Q2X');
-</script>
+</script> -->
