--- a/_layouts/pony.html
+++ b/_layouts/pony.html
@@ -67,7 +67,7 @@
   <!-- Display the countdown timer in an element -->
 
   <div id="divc">
-    <h1>吳方奈米口嗨累計時間<p id="timer"></p>
+    <h1>口嗨累計時間<p id="timer"></p>
     </h1>
   </div>
 
