--- a/_layouts/backponytest.html
+++ b/_layouts/backponytest.html
@@ -83,7 +83,7 @@
       }
       </script>
     <!-- nocache,http referrer -->
-    <meta name="referrer" content="no-referrer">
+    <img referrerpolicy="no-referrer">
     <META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
     <META HTTP-EQUIV="EXPIRES" CONTENT="0">
     <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE">
