--- a/_layouts/backponytest.html
+++ b/_layouts/backponytest.html
@@ -21,10 +21,6 @@
           width: 1080px;
     
       }
-      iframe {
-          width: 1080px;
-    
-      }
       .myBtn {
         display: none;
         position: fixed;
@@ -86,11 +82,12 @@
         document.documentElement.scrollTop = document.documentElement.scrollHeight;
       }
       </script>
-    <!-- nocache,http referrer -->
-    <img referrerpolicy="no-referrer">
+    <!-- nocache,http referrer -->  
+    <meta name="referrer" content="no-referrer">
+    <iframe referrerpolicy="no-referrer-when-downgrade">
     <META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
     <META HTTP-EQUIV="EXPIRES" CONTENT="0">
-    <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE">
+    <META HTTP-EQUIV="CACHE-CONTROSL" CONTENT="NO-CACHE">
     <!-- thumbnail   -->
     <meta property="og:title" content="Twilight's Library"/>
     <meta property="og:description" content="Full with Friendship is Magic Episode"/>
