--- a/_layouts/backponytest.html
+++ b/_layouts/backponytest.html
@@ -21,6 +21,10 @@
           width: 1080px;
     
       }
+      iframe {
+          width: 1080px;
+          height: auto;
+      }
       .myBtn {
         display: none;
         position: fixed;
