--- a/_layouts/backponytest.html
+++ b/_layouts/backponytest.html
@@ -22,8 +22,8 @@
     
       }
       iframe {
-          width: 1080px;
-          height: auto;
+          width: 100%;
+          height: 100%;
       }
       .myBtn {
         display: none;
