--- a/_layouts/backponytest.html
+++ b/_layouts/backponytest.html
@@ -22,8 +22,8 @@
     
       }
       iframe {
-          width: 360px;
-          height: 640px;
+          width: 100%;
+          height: 360px;
       }
       .myBtn {
         display: none;
