--- a/_layouts/pony.html
+++ b/_layouts/pony.html
@@ -75,10 +75,10 @@
     var requestURL = "https://linbei9487.github.io/json/countdown.json"
     var request = new XMLHttpRequest();
     request.open('GET', requestURL);
-    request.responseType = 'json';
+    // request.responseType = 'json';
     request.send();
     request.onload = function() {
-    var countjson = Json.parse(request.responsetext);
+    var countjson = JSON.parse(request.responsetext);
 }
     // Set the date we're counting down to
     var countDownDate = new Date(countjson.countdown).getTime();
