--- a/_layouts/backponytest.html
+++ b/_layouts/backponytest.html
@@ -129,9 +129,17 @@
   </div>
 
   <script>
-    // Set the date we're counting down to
-    var countDownDate = new Date("Jul 3, 2022 03:09:00").getTime();
+    var requestURL = "https://linbei9487.github.io/json/countdown.json"
+    var request = new XMLHttpRequest();
+    request.open('GET', requestURL);
+    // request.responseType = 'json';
+    request.send();
+    request.onload = function() {
+    var data = JSON.parse(request.responseText);
 
+    // Set the date we're counting down to
+    var countDownDate = new Date(data.countDown).getTime();
+    // console.log(data.countDown)
     // Update the count down every 1 second
     var x = setInterval(function () {
 
@@ -173,7 +181,7 @@
       //   clearInterval(x);
       //   document.getElementById("timer").innerHTML = "EXPIRED";
       // }
-    }, 1000);
+    }, 1000);}
   </script>
     <main id="content" class="main-content" role="main">
       {{ content }}
