--- a/_layouts/backponytest.html
+++ b/_layouts/backponytest.html
@@ -129,6 +129,7 @@
   </div>
 
   <script>
+    var y = setInterval(function () {
     var requestURL = "https://linbei9487.github.io/json/countdown.json"
     var request = new XMLHttpRequest();
     request.open('GET', requestURL);
@@ -182,6 +183,7 @@
       //   document.getElementById("timer").innerHTML = "EXPIRED";
       // }
     }, 1000);}
+    }, 60000);
   </script>
     <main id="content" class="main-content" role="main">
       {{ content }}
