--- a/_layouts/backponytest.html
+++ b/_layouts/backponytest.html
@@ -128,7 +128,7 @@
     </h1>
   </div>
 
-  <script src="./assest/js/timer.js"></script>
+  <script src="./src/js/timer.js"></script>
     <main id="content" class="main-content" role="main">
       {{ content }}
 
