--- a/_layouts/backpony.html
+++ b/_layouts/backpony.html
@@ -21,26 +21,7 @@
           width: 1080px;
     
       }
-      .myBtn {
-        display: none;
-        position: fixed;
-        bottom: 20px;
-        right: 30px;
-        z-index: 99;
-        font-size: 18px;
-        border: none;
-        outline: none;
-        background-color: black;
-        opacity: 0.5;
-        color: white;
-        cursor: pointer;
-        padding: 15px;
-        border-radius: 4px;
-      }
 
-      .myBtn:hover {
-        background-color: #555;
-      }
   </style>
 {% seo %}
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -49,39 +30,14 @@
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" href="./css/btn.css"  type="text/css">
+    <link rel="stylesheet" href="./css/countdown.css"  type="text/css">
     {% include head-custom.html %}
   </head>
   <body>
     <button onclick="topFunction()" class="myBtn" id="buttontop" title="Go to top">Top</button>
     <button onclick="bottomFunction()" class="myBtn" id="buttonbottom" title="Go to Bottom">End</button>
-    <script>
-      //Get the button
-      // var mybutton = document.getElementById("buttontop");
-      
-      // When the user scrolls down 20px from the top of the document, show the button
-      window.onscroll = function() {scrollFunction()};
-      
-      function scrollFunction() {
-        if (document.body.scrollTop > (document.body.scrollHeight/2) || document.documentElement.scrollTop > (document.documentElement.scrollHeight/2)) {
-          document.getElementById("buttontop").style.display = "block";
-          document.getElementById("buttonbottom").style.display = "none";
-        } else {
-          document.getElementById("buttontop").style.display = "none";
-          document.getElementById("buttonbottom").style.display = "block";
-        }
-      }
-      
-      // When the user clicks on the button, scroll to the top of the document
-      function topFunction() {
-        document.body.scrollTop = 0;
-        document.documentElement.scrollTop = 0;
-      }
-      // When the user clicks on the button, scroll to the bottom of the document
-      function bottomFunction() {
-        document.body.scrollTop = document.body.scrollHeight;
-        document.documentElement.scrollTop = document.documentElement.scrollHeight;
-      }
-      </script>
+
     <!-- nocache,http referrer -->
     <meta name="referrer" content="no-referrer">
     <META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
@@ -106,7 +62,7 @@
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
     </header>
-
+    <script src="./src/js/btn.js"></script>
     <main id="content" class="main-content" role="main">
       {{ content }}
 
