--- a/_layouts/testpage.html
+++ b/_layouts/testpage.html
@@ -69,7 +69,9 @@
     </header>
 
     <!-- Display the countdown timer in an element -->
-  <script src="./src/js/btn.js"></script>
+    <button onclick="topFunction()" class="myBtn" id="buttontop" title="Go to top">Top</button>
+    <button onclick="bottomFunction()" class="myBtn" id="buttonbottom" title="Go to Bottom">End</button>
+    <script src="./src/js/btn.js"></script>
   <div id="divc">
     <h1>口嗨累計時間<p id="timer"></p>
     </h1>
