--- a/_layouts/backpony.html
+++ b/_layouts/backpony.html
@@ -62,7 +62,7 @@
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
     </header>
-    <script src="./src/js/btn.js"></script>
+    <script src="/src/js/btn.js"></script>
     <div id="divc">
       <h1>口嗨累計時間<p id="timer"></p>
       </h1>
