--- a/_layouts/backpony.html
+++ b/_layouts/backpony.html
@@ -30,8 +30,8 @@
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    <link rel="stylesheet" href="./src/css/btn.css"  type="text/css">
-    <link rel="stylesheet" href="./src/countdown.css"  type="text/css">
+    <link rel="stylesheet" href="/src/css/btn.css"  type="text/css">
+    <link rel="stylesheet" href="/src/countdown.css"  type="text/css">
     {% include head-custom.html %}
   </head>
   <body>
@@ -68,7 +68,7 @@
       </h1>
     </div>
   
-    <script src="./src/js/timer.js"></script>
+    <script src="/src/js/timer.js"></script>
     <main id="content" class="main-content" role="main">
       {{ content }}
 
