--- a/_layouts/backpony.html
+++ b/_layouts/backpony.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
 
-    <meta http-equiv="refresh" content="20">
+    <!-- <meta http-equiv="refresh" content="20"> -->
     <!-- <link rel="canonical" href="https://linbei9487.github.io/pony"> -->
     <style>
       html {
@@ -31,7 +31,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <link rel="stylesheet" href="/src/css/btn.css"  type="text/css">
-    <link rel="stylesheet" href="/src/countdown.css"  type="text/css">
+    <link rel="stylesheet" href="/src/css/countdown.css"  type="text/css">
     {% include head-custom.html %}
   </head>
   <body>
