--- a/_layouts/backpony.html
+++ b/_layouts/backpony.html
@@ -21,6 +21,10 @@
           width: 1080px;
     
       }
+      iframe {
+          width: 100%;
+          height: 468px;
+      }
 
   </style>
 {% seo %}
