--- a/_layouts/backpony.html
+++ b/_layouts/backpony.html
@@ -44,9 +44,9 @@
 
     <!-- nocache,http referrer -->
     <meta name="referrer" content="no-referrer">
-    <META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
-    <META HTTP-EQUIV="EXPIRES" CONTENT="0">
-    <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE">
+    <!-- <META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
+    <META HTTP-EQUIV="EXPIRES" CONTENT="0"> -->
+    <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="max-age=0">
     <!-- thumbnail   -->
     <meta property="og:title" content="Twilight's Library"/>
     <meta property="og:description" content="Full with Friendship is Magic Episode"/>
