--- a/_layouts/backpony.html
+++ b/_layouts/backpony.html
@@ -46,7 +46,7 @@
     <meta name="referrer" content="no-referrer">
     <!-- <META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
     <META HTTP-EQUIV="EXPIRES" CONTENT="0"> -->
-    <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="max-age=0">
+    <META HTTP-EQUIV="cache-control" CONTENT="max-age=0">
     <!-- thumbnail   -->
     <meta property="og:title" content="Twilight's Library"/>
     <meta property="og:description" content="Full with Friendship is Magic Episode"/>
