--- a/_layouts/backpony.html
+++ b/_layouts/backpony.html
@@ -25,7 +25,8 @@
           width: 100%;
           height: 468px;
       }
-
+      
+      
   </style>
 {% seo %}
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -41,12 +42,12 @@
   <body>
     <button onclick="topFunction()" class="myBtn" id="buttontop" title="Go to top">Top</button>
     <button onclick="bottomFunction()" class="myBtn" id="buttonbottom" title="Go to Bottom">End</button>
-
-    <!-- nocache,http referrer -->
+    
+    <!-- nocache,http referrer -->  
     <meta name="referrer" content="no-referrer">
-    <!-- <META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
-    <META HTTP-EQUIV="EXPIRES" CONTENT="0"> -->
-    <META HTTP-EQUIV="cache-control" CONTENT="max-age=0">
+    <META HTTP-EQUIV="PRAGMA" CONTENT="NO-CACHE">
+    <META HTTP-EQUIV="EXPIRES" CONTENT="0">
+    <META HTTP-EQUIV="CACHE-CONTROSL" CONTENT="NO-CACHE">
     <!-- thumbnail   -->
     <meta property="og:title" content="Twilight's Library"/>
     <meta property="og:description" content="Full with Friendship is Magic Episode"/>
@@ -66,13 +67,15 @@
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
     </header>
-    <script src="/src/js/btn.js"></script>
-    <div id="divc">
-      <h1>口嗨累計時間<p id="timer"></p>
-      </h1>
-    </div>
-  
-    <script src="/src/js/timer.js"></script>
+
+    <!-- Display the countdown timer in an element -->
+  <script src="/src/js/btn.js"></script>
+  <div id="divc">
+    <h1>口嗨累計時間<p id="timer"></p>
+    </h1>
+  </div>
+
+  <script src="/src/js/timer.js"></script>
     <main id="content" class="main-content" role="main">
       {{ content }}
 
