--- a/_layouts/backpony.html
+++ b/_layouts/backpony.html
@@ -70,10 +70,10 @@
 
     <!-- Display the countdown timer in an element -->
   <script src="/src/js/btn.js"></script>
-  <div id="divc">
+  <!-- <div id="divc">
     <h1>口嗨累計時間<p id="timer"></p>
     </h1>
-  </div>
+  </div> -->
 
   <script src="/src/js/timer.js"></script>
     <main id="content" class="main-content" role="main">
