--- a/_layouts/pony.html
+++ b/_layouts/pony.html
@@ -66,10 +66,10 @@
 
   <!-- Display the countdown timer in an element -->
 
-  <div id="divc">
+  <!-- <div id="divc">
     <h1>口嗨累計時間<p id="timer"></p>
     </h1>
-  </div>
+  </div> -->
 
   <script src="./src/js/timer.js"></script>
 
