--- a/_layouts/testpage.html
+++ b/_layouts/testpage.html
@@ -72,10 +72,10 @@
     <button onclick="topFunction()" class="myBtn" id="buttontop" title="Go to top">Top</button>
     <button onclick="bottomFunction()" class="myBtn" id="buttonbottom" title="Go to Bottom">End</button>
     <script src="/src/js/btn.js"></script>
-  <div id="divc">
+  <!-- <div id="divc">
     <h1>口嗨累計時間<p id="timer"></p>
     </h1>
-  </div>
+  </div> -->
 
   <script src="/src/js/timer.js"></script>
     <main id="content" class="main-content" role="main">
