btu script update

--- a/_layouts/backpony.html
+++ b/_layouts/backpony.html
@@ -40,8 +40,8 @@
     {% include head-custom.html %}
   </head>
   <body>
-    <button onclick="topFunction()" class="myBtn" id="buttontop" title="Go to top">Top</button>
-    <button onclick="bottomFunction()" class="myBtn" id="buttonbottom" title="Go to Bottom">End</button>
+    <!-- <button onclick="topFunction()" class="myBtn" id="buttontop" title="Go to top">Top</button>
+    <button onclick="bottomFunction()" class="myBtn" id="buttonbottom" title="Go to Bottom">End</button> -->
     
     <!-- nocache,http referrer -->  
     <meta name="referrer" content="no-referrer">
