auto append css file

--- a/_layouts/pony.html
+++ b/_layouts/pony.html
@@ -20,7 +20,7 @@
       background-size: cover;
     }
 
-    #divc {
+    /* #divc {
       display: inline;
       position: fixed;
       bottom: 20px;
@@ -29,7 +29,7 @@
       font-size: 12px;
       opacity: 0.5;
       color: black;
-    }
+    } */
   </style>
   {% seo %}
   <link rel="preconnect" href="https://fonts.gstatic.com">
