--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,1 +1,1 @@
-<link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
+<link rel="shortcut icon" type="image/x-icon" href="https://static.wikia.nocookie.net/mlp/images/4/4a/Site-favicon.ico/revision/latest?cb=20210531205122">
