--- a/_includes/head-custom-google-analytics.html
+++ b/_includes/head-custom-google-analytics.html
@@ -1,3 +1,4 @@
+{% if site.google_analytics %}
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-D6TE587Q2X"></script>
 <script>
@@ -7,3 +8,4 @@
 
   gtag('config', 'G-D6TE587Q2X');
 </script>
+{% endif %}
