--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,1 +1,9 @@
+<!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
+
+<!-- Setup Google Analytics -->
+{% include head-custom-google-analytics.html %}
+<!-- You can set your favicon here -->
+<!-- link rel="shortcut icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}" -->
 <link rel="shortcut icon" type="image/x-icon" href="https://static.wikia.nocookie.net/mlp/images/4/4a/Site-favicon.ico/revision/latest?cb=20210531205122">
+
+<!-- end custom head snippets -->
