--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -4,6 +4,8 @@
 {% include head-custom-google-analytics.html %}
 <!-- You can set your favicon here -->
 <!-- link rel="shortcut icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}" -->
-<link rel="shortcut icon" type="image/x-icon" href="https://static.wikia.nocookie.net/mlp/images/4/4a/Site-favicon.ico/revision/latest?cb=20210531205122">
+{% if page.url == "/pony" %}
+   <link rel="shortcut icon" type="image/x-icon" href="https://static.wikia.nocookie.net/mlp/images/4/4a/Site-favicon.ico/revision/latest?cb=20210531205122">
+{% endif %}
 
 <!-- end custom head snippets -->
