--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -4,7 +4,7 @@
 {% include head-custom-google-analytics.html %}
 <!-- You can set your favicon here -->
 <!-- link rel="shortcut icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}" -->
-{% if page.dir == "/pony/*" %}
+{% if page.pony == "true" %}
    <link rel="shortcut icon" type="image/x-icon" href="https://static.wikia.nocookie.net/mlp/images/4/4a/Site-favicon.ico/revision/latest?cb=20210531205122">
 {% endif %}
 
