--- a/_layouts/backpony.html
+++ b/_layouts/backpony.html
@@ -60,7 +60,9 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      <a href="https://linbei9487.github.io/pony/history" class="btn">Back to Twilight's Library</a>
+      {% if page.buttonurl %}
+      <a href="{{page.buttonurl}}" class="btn">{{page.buttontxt}}</a>
+      {% endif %}
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
